Some stuff was removed

--- a/Activity 1.ipynb
+++ b/Activity 1.ipynb
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -131,14 +131,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "You can observe for 11.0 h tonight. Winter is the best season.\n"
+      "You can observe for 11.0 h tonight.\n"
      ]
     }
    ],
@@ -147,12 +147,12 @@
     "observe_end1 = APO.twilight_morning_astronomical(window_start, which='nearest')\n",
     "observing_length1 = (observe_end1 - observe_start1)\n",
     "observing_range1 = [observe_start1, observe_end1]\n",
-    "print(\"You can observe for {0:.1f} tonight. Winter is the best season.\".format(observing_length1.to(u.h)))"
+    "print(\"You can observe for {0:.1f} tonight.\".format(observing_length1.to(u.h)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
        "0.21625726075476903"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -234,52 +234,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'FixedTarget' object is not subscriptable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-38-06a4f3ccf744>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mobj_frac\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmy_target\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'fraction of time observable'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0mobj_time\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mobj_frac\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mobserving_length\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0moutput\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"You can observe {0:s} for {1:.2f}\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mobj_time\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mu\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mh\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'FixedTarget' object is not subscriptable"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "observing_length = (observe_end1 - observe_start1)\n",
-    "\n",
-    "obj_frac = my_target['fraction of time observable']\n",
-    "obj_time = obj_frac * observing_length\n",
-    "output = \"You can observe {0:s} for {1:.2f}\".format(name, obj_time.to(u.h))\n",
-    "print(output)"
+    "#aim mass <1.5 for the most amount of time, also since RA is ~42 for m31, find when the sun has a RA of about 12-13,\n",
+    "#when the sun is the opposite it is the best."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-40-c954e23dcce5>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-40-c954e23dcce5>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    if my_target['ever observable']\u001b[0m\n\u001b[0m                                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
-   "source": [
-    "if my_target['ever observable']\n",
-    "        name = my_target['target name']\n",
-    "        obj_frac = my_target['fraction of time observable']\n",
-    "        obj_time = obj_frac * observing_length\n",
-    "        output = \"You can observe {0:s} for {1:.2f}\".format(name, obj_time.to(u.h))\n",
-    "        print(output)"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
