My final code for Assignment 2

--- a/MichaelHiggins/Astro480Assignment2.ipynb
+++ b/MichaelHiggins/Astro480Assignment2.ipynb
@@ -824,11 +824,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "For this it is apparent that none of my targets will be greater than 30 degrees away from the moon and the moon will be full for the first 4 days of my observation... not great."
+   ]
   }
  ],
  "metadata": {
